src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Complete_Product_Name__c</fullName>
        <formula>Public_Product_Name__c  &amp;&quot; for &quot;&amp;  Guide__c</formula>
        <inlineHelpText>Combination of the Product Name, Publication Name and Publication Year in a single string.</inlineHelpText>
        <label>Complete Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guide__c</fullName>
        <label>Guide</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_items__c</fullName>
        <description>Bulleted list of included items in the Product bundle.</description>
        <inlineHelpText>Bulleted list of included items in the Product bundle.</inlineHelpText>
        <label>Included items</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Needs_Included_Items__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identifies Products that need Included Items updates</description>
        <inlineHelpText>Identifies Products that need Included Items updates</inlineHelpText>
        <label>Needs Included Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Product_Name__c</fullName>
        <label>Public Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <label>Sales Team</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Guide__c</columns>
        <columns>Complete_Product_Name__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Category__c</columns>
        <columns>Sales_Team__c</columns>
        <columns>Needs_Included_Items__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products</label>
    </listViews>
    <listViews>
        <fullName>Active_Products_Needing_Included_Items</fullName>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Guide__c</columns>
        <columns>Public_Product_Name__c</columns>
        <columns>Complete_Product_Name__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Sales_Team__c</columns>
        <columns>Needs_Included_Items__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Needs_Included_Items__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products Needing Included Items</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Complete_Product_Name__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>